# schtools

./: pyproject.toml  run.py
scripts/: run.py
src/schtools/: __init__.py  _sch_database.py  config.py  config.toml
src/schtools/datamanager/: __init__.py  _annotation.py  _sch.py  datasets.py
src/schtools/websearch/: __init__.py  _google_search.py  _websearch.py
tests/notebooks/: development_notebook.ipynb
